# technopark_c_cpp

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  filter.c  filter.h  first_assignment.c  main.c  string_functions.c  string_functions.h
hw2_shared/: CMakeLists.txt
hw2_shared/include/: comment_struct.h
hw2_shared/src/: count_comments.c  read_comments.c
hw2_shared/test/: CMakeLists.txt  test_count.cpp
hw2_static/: CMakeLists.txt
hw2_static/include/: comment_struct.h  count_comments.h  read_comments.h
hw2_static/src/: count_comments.c  read_comments.c
hw2_static/test/: CMakeLists.txt  test_count.cpp  test_read.cpp
include/: comment_struct.h  count_comments.h  read_comments.h
src/: filter.c  filter.h  main.c  string_functions.c  string_functions.h  strings_vector.c  strings_vector.h
stress_test/: CMakeLists.txt  compare_test.cpp  measure.cpp  stress_test_generation.py
test/: CMakeLists.txt  filter_test.cpp  string_functions_test.cpp  strings_vector_test.cpp  test_count.cpp  test_input.txt  test_read.cpp
test_input_files/: invalid_grade.txt  negative_comments_count.txt  random_values.txt  votes_eof.txt  wrong_id_format.txt  wrong_votes_format.txt
